[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titanhttp"
version = "1.2.0"
description = "Pure Python HTTP Arsenal — zero dependencies, modular architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "<!> RappUyy <!>", email = "rappoffc@gmail.com"},
]
keywords = ["http", "client", "pure-python", "websocket", "http2", "graphql", "http-tools", "tools", "signal-tools", "rappuy", "rapp", "rappdev"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/RappUyy/titanhttp"
Documentation = "https://github.com/RappUyy/titanhttp#readme"
Repository = "https://github.com/RappUyy/titanhttp.git"
Issues = "https://github.com/RappUyy/titanhttp/issues"

[project.scripts]
titanhttp = "titanhttp.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["titanhttp*"]
exclude = ["tests*"]
